--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+           <groupId>com.sun.tools</groupId>
+           <artifactId>javac</artifactId>
+           <version>15</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
